--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -159,7 +159,7 @@
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.0-beta-9</version>
+        <version>2.1</version>
         <configuration>
           <!--  do not run site-deploy goal, included in the default settings  -->
           <goals>deploy</goals>
@@ -287,5 +287,12 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+    	<groupId>org.xerial.snappy</groupId>
+    	<artifactId>snappy-java</artifactId>
+    	<version>1.0.1-rc1</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
