--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-lens</artifactId>
-      <version>2.0.6-SNAPSHOT</version>
+      <version>2.0.6</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
