--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.utgenome</groupId>
     <artifactId>utgb-toolkit</artifactId>
@@ -36,12 +37,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.7.2</version>
         <configuration>
-        <!-- 
-          <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/${project.build.outputDirectory}</additionalClasspathElement>
-          </additionalClasspathElements>
-		  <forkMode>always</forkMode>
-        -->
+          <!-- <additionalClasspathElements> <additionalClasspathElement>${basedir}/${project.build.outputDirectory}</additionalClasspathElement> 
+            </additionalClasspathElements> <forkMode>always</forkMode> -->
         </configuration>
       </plugin>
 
@@ -51,42 +48,16 @@
         <version>2.0</version>
       </plugin>
 
-    <!--    
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>1.3.3</version>
-        <configuration>
-          <transformers>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-              <mainClass>org.utgenome.shell.UTGBShell</mainClass>
-            </transformer>
-          </transformers>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-shade</id>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>standalone</shadedClassifierName>
-              <artifactSet>
-		<excludes>
-    		  <exclude>com.google.gwt:gwt-dev</exclude>
-    		  <exclude>com.google.gwt:gwt-user</exclude>
-    		  <exclude>com.google.gwt.gears:*</exclude>
-        	  <exclude>com.allen_sauer.gwt:gwt-dnd</exclude>
-        	  <exclude>*:gwt-incubator</exclude>
-  		</excludes>
-	      </artifactSet>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      -->
+      <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
+        <version>1.3.3</version> <configuration> <transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
+        <mainClass>org.utgenome.shell.UTGBShell</mainClass> </transformer> </transformers> 
+        </configuration> <executions> <execution> <id>make-shade</id> <phase>package</phase> 
+        <goals> <goal>shade</goal> </goals> <configuration> <shadedArtifactAttached>true</shadedArtifactAttached> 
+        <shadedClassifierName>standalone</shadedClassifierName> <artifactSet> <excludes> 
+        <exclude>com.google.gwt:gwt-dev</exclude> <exclude>com.google.gwt:gwt-user</exclude> 
+        <exclude>com.google.gwt.gears:*</exclude> <exclude>com.allen_sauer.gwt:gwt-dnd</exclude> 
+        <exclude>*:gwt-incubator</exclude> </excludes> </artifactSet> </configuration> 
+        </execution> </executions> </plugin> -->
 
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
@@ -96,7 +67,7 @@
           <descriptors>
             <descriptor>src/assembly/bin.xml</descriptor>
           </descriptors>
-        </configuration>  
+        </configuration>
         <executions>
           <execution>
             <id>make-assembly</id>
@@ -112,7 +83,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.1</version>
         <configuration>
-          <!--  do not run site-deploy goal, included in the default settings  -->
+          <!-- do not run site-deploy goal, included in the default settings -->
           <goals>deploy</goals>
           <connectionUrl>scm:hg:https://utgb.googlecode.com/hg/</connectionUrl>
         </configuration>
@@ -135,7 +106,7 @@
   </scm>
 
   <dependencies>
-    
+
     <dependency>
       <groupId>org.utgenome</groupId>
       <artifactId>utgb-core</artifactId>
@@ -147,7 +118,7 @@
       <artifactId>svnkit</artifactId>
       <version>1.3.0.5847</version>
     </dependency>
-    
+
 
     <!-- Tomcat Libraries -->
     <dependency>
@@ -187,18 +158,30 @@
     </dependency>
 
     <dependency>
-    	<groupId>org.codehaus.plexus</groupId>
-    	<artifactId>plexus-classworlds</artifactId>
-    	<version>2.4</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-classworlds</artifactId>
+      <version>2.4</version>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
     <dependency>
-    	<groupId>org.apache.maven</groupId>
-    	<artifactId>maven-embedder</artifactId>
-    	<version>3.0.3</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-embedder</artifactId>
+      <version>3.0.3</version>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-connector-wagon</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.wagon</groupId>
+      <artifactId>wagon-http</artifactId>
+      <version>1.0-beta-7</version>
+    </dependency>
+
   </dependencies>
 </project>
