--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -173,6 +173,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-connector-wagon</artifactId>
+      <version>1.11</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-http</artifactId>
       <version>1.0-beta-7</version>
