Issue management system is now Jenkins. Good by Hudson.

--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
   </issueManagement>
 
   <ciManagement>
-    <system>hudson</system>
-    <url>http://utgenome.org/hudson</url>
+    <system>jenkins</system>
+    <url>http://utgenome.org/jenkins</url>
   </ciManagement>
 
   <mailingLists>
