--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -290,7 +290,7 @@
     <dependency>
     	<groupId>org.xerial.snappy</groupId>
     	<artifactId>snappy-java</artifactId>
-    	<version>1.0.1-rc4</version>
+    	<version>1.0.3-SNAPSHOT</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
