Embedded to Tomcat class. META-INF/config.xml problem still needs to be fixed

--- a/.hgignore
+++ b/.hgignore
@@ -2,10 +2,12 @@ target
 .classpath
 .project
 .idea
+.settings
 war/utgb
 utgb-core/src/main/webapp/theme
 utgb-core/db/genome
 utgb-core/db/tmp
+war/WEB-INF/deploy
 
 syntax: glob
 *~
