--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -194,11 +194,6 @@
     </dependency>
 
     <!-- ant library contains tar.bz2 extracting utility -->
-    <dependency>
-      <groupId>org.apache.ant</groupId>
-      <artifactId>ant</artifactId>
-      <version>1.7.1</version>
-    </dependency>
 
 
     <dependency>
@@ -291,6 +286,13 @@
     	<groupId>org.xerial.snappy</groupId>
     	<artifactId>snappy-java</artifactId>
     	<version>1.0.3-SNAPSHOT</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.ant</groupId>
+    	<artifactId>ant</artifactId>
+    	<version>1.7.1</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
