--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -285,14 +285,7 @@
     <dependency>
     	<groupId>org.xerial.snappy</groupId>
     	<artifactId>snappy-java</artifactId>
-    	<version>1.0.3-SNAPSHOT</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.apache.ant</groupId>
-    	<artifactId>ant</artifactId>
-    	<version>1.7.1</version>
+    	<version>1.0.3-rc4</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
