--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>org.utgenome</groupId>
@@ -37,7 +38,7 @@
 
 
     <plugins>
-    
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
@@ -47,7 +48,7 @@
           <escapeString>\</escapeString>
         </configuration>
       </plugin>
-    
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
@@ -80,10 +81,10 @@
         <artifactId>maven-eclipse-plugin</artifactId>
         <version>2.8</version>
         <configuration>
-          <!-- 
-          <buildOutputDirectory>war/WEB-INF/classes</buildOutputDirectory> 
-           -->
-          <excludes><exclude>com.google.gwt:gwt-servlet</exclude></excludes>
+          <!-- <buildOutputDirectory>war/WEB-INF/classes</buildOutputDirectory> -->
+          <excludes>
+            <exclude>com.google.gwt:gwt-servlet</exclude>
+          </excludes>
           <useProjectReferences>false</useProjectReferences>
         </configuration>
       </plugin>
@@ -161,7 +162,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.1</version>
         <configuration>
-          <!--  do not run site-deploy goal, included in the default settings  -->
+          <!-- do not run site-deploy goal, included in the default settings -->
           <goals>deploy</goals>
           <connectionUrl>scm:hg:https://core.utgb.googlecode.com/hg/</connectionUrl>
         </configuration>
@@ -176,7 +177,7 @@
     <connection>scm:hg:https://utgb.googlecode.com/hg/</connection>
     <developerConnection>scm:hg:default</developerConnection>
   </scm>
-    
+
   <repositories>
     <repository>
       <id>utgb</id>
@@ -193,7 +194,15 @@
       <version>1.2</version>
     </dependency>
 
-    <!-- ant library contains tar.bz2 extracting utility -->
+
+
+    <!-- library contains tar.bz2 extracting utility -->
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-archiver</artifactId>
+      <version>2.0.1</version>
+        <scope>compile</scope>
+    </dependency>
 
 
     <dependency>
@@ -266,14 +275,9 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- OpenID Authentication  -->
-    <!--
-    <dependency>
-      <groupId>org.openid4java</groupId>
-      <artifactId>openid4java-consumer</artifactId>
-      <version>0.9.5</version>
-    </dependency>
-    -->
+    <!-- OpenID Authentication -->
+    <!-- <dependency> <groupId>org.openid4java</groupId> <artifactId>openid4java-consumer</artifactId> 
+      <version>0.9.5</version> </dependency> -->
     <dependency>
       <groupId>jfree</groupId>
       <artifactId>jfreechart</artifactId>
@@ -283,11 +287,12 @@
     </dependency>
 
     <dependency>
-    	<groupId>org.xerial.snappy</groupId>
-    	<artifactId>snappy-java</artifactId>
-    	<version>1.0.3-rc4</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
+      <groupId>org.xerial.snappy</groupId>
+      <artifactId>snappy-java</artifactId>
+      <version>1.0.3.3</version>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
+
   </dependencies>
 </project>
