--- a/utgb-core/.settings/org.eclipse.core.resources.prefs
+++ b/utgb-core/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Tue Feb 23 13:30:10 JST 2010
+#Mon Sep 26 17:21:55 JST 2011
 eclipse.preferences.version=1
-encoding/<project>=UTF-8
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
