--- a/utgb-precompiled/pom.xml
+++ b/utgb-precompiled/pom.xml
@@ -15,12 +15,12 @@
 
   <!-- set your GWT module name within the gwt.module tag (optional) -->  
   <properties>
-    <utgb.version>1.5.5-SNAPSHOT</utgb.version>
-    <gwt.version>2.2.0</gwt.version>
+    <utgb.version>1.5.7</utgb.version>
+    <gwt.version>2.3.0</gwt.version>
     <gwt.module>org.utgenome.precompiled.gwt.Browser</gwt.module>
     <gwt.module.path>org/utgenome/precompiled/gwt/Browser.gwt.xml</gwt.module.path>
     <sqlite-jdbc.version>3.7.2</sqlite-jdbc.version>
-    <tomcat.version>6.0.26</tomcat.version>
+    <tomcat.version>7.0.16</tomcat.version>
     <gwt.jvmargs></gwt.jvmargs>
   </properties>
 
@@ -98,12 +98,13 @@
   
      <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
-      <version>2.2-beta-3</version>
+      <version>2.2.1</version>
       <configuration>
         <descriptors>
           <descriptor>src/assembly/jar.xml</descriptor>
+          <descriptor>src/assembly/package.xml</descriptor>
         </descriptors>
-        <appendAssemblyId>false</appendAssemblyId>
+        <appendAssemblyId>true</appendAssemblyId>
       </configuration>
       <executions>
         <execution>
@@ -221,10 +222,6 @@
         <version>1.1</version>
         <configuration>
           <server>tomcat</server>
-          <url>http://localhost:8080/manager</url>
-          <!-- specify your web application's context path. If the path value is "/myapp",
-          	 your web application is deployed at http://localhost:8080/myapp  -->
-          <path>/utgb-precompiled</path>
           <contextFile>${project.build.directory}/utgb/META-INF/context.xml</contextFile>
           <mode>both</mode>
           <ignorePackaging>true</ignorePackaging>
@@ -278,7 +275,7 @@
 	<!-- Servlet API -->    
     <dependency>
       <groupId>org.apache.tomcat</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>tomcat-servlet-api</artifactId>
       <version>${tomcat.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -321,6 +318,7 @@
       <scope>provided</scope>
     </dependency>
 
+	<!--
     <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
@@ -344,6 +342,7 @@
       <artifactId>hsqldb</artifactId>
       <version>1.8.0.10</version>
     </dependency>
+    -->
         
   </dependencies>
 
