--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -2,14 +2,14 @@
   <parent>
     <groupId>org.utgenome</groupId>
     <artifactId>utgb-toolkit</artifactId>
-    <version>1.5.8-SNAPSHOT</version>
+    <version>1.5.8</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-shell</artifactId>
   <packaging>jar</packaging>
-  <version>1.5.8-SNAPSHOT</version>
+  <version>1.5.8</version>
   <name>UTGB Shell</name>
   <description>A command-line client of UTGB Toolkit.</description>
 
