--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -199,6 +199,21 @@
                     <versionRange>[2.1,)</versionRange>
                     <goals>
                       <goal>copy</goal>
+                      <goal>unpack</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore />
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <versionRange>[2.1,)</versionRange>
+                    <goals>
+                      <goal>resources</goal>
+                      <goal>testResources</goal>
                     </goals>
                   </pluginExecutionFilter>
                   <action>
