--- a/utgb-themes/theme-default/pom.xml
+++ b/utgb-themes/theme-default/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <groupId>org.utgenome.theme</groupId>
     <artifactId>utgb-themes</artifactId>
-    <version>1.5.9-SNAPSHOT</version>
+    <version>1.5.9</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome.theme</groupId>
   <artifactId>theme-default</artifactId>
   <name>UTGB Default Theme</name>
-  <version>1.5.9-SNAPSHOT</version>
+  <version>1.5.9</version>
   <description>UTGB Default Theme</description>
   <packaging>jar</packaging>
 
