--- a/utgb-web/pom.xml
+++ b/utgb-web/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>utgb-web</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>utgb-core</name>
+  <name>utgb-web</name>
   <description>utgb-core created by UTGB Toolkit</description>
 
   <issueManagement>
